# six

./: readme
MultiClient/app/: CMakeLists.txt  build.gradle
MultiClient/app/src/main/: AndroidManifest.xml
MultiClient/app/src/main/cpp/: App.cpp  App.h  Core.cpp  DataLogic.cpp  DataLogic.h  com_oseasy_mmc_multiclient_CORE.h  com_oseasy_mmc_multiclient_MultiClient.h  gloab.h  global.cpp  logger.h  tcpclient.cpp  tcpclient.h  tcpmoduledefine.h
MultiClient/app/src/main/cpp/common/: DataCacheWrapper.h  MessageDefine.h  ParseWrapper.h  SafetyDelete.h  WaitWrapper.h  WinError.h  netutility.h  stringexcept.h
MultiClient/app/src/main/java/com/oseasy/mmc/multiclient/: Core.java  LogToFile.java  MultiClient.java  MultiClientServer.java  PropertyUtil.java  ShellUtil.java
MultiClient/app/src/main/res/values/: strings.xml
MultiClient/gradle/wrapper/: gradle-wrapper.properties
loader/app/: build.gradle
loader/app/src/main/: AndroidManifest.xml
loader/app/src/main/java/com/oseasy/mmc/loader/: AutoReciver.java  Loader.java  LogToFile.java  OemUtil.java  PropertyUtil.java
loader/gradle/wrapper/: gradle-wrapper.properties
localaudiorender/app/: CMakeLists.txt  build.gradle
localaudiorender/app/src/main/: AndroidManifest.xml
localaudiorender/app/src/main/cpp/: AudioRender.cpp  DataQueue.h  Reciever.h  UdpSender.cpp  aacdec.h  com_oseasy_mmc_localaudiorender_AudioRender.h  logger.h  udpAudioUnPacker.cpp  udpAudioUnPacker.h
localaudiorender/app/src/main/cpp/include/common/: SafetyDelete.h  types.h
localaudiorender/app/src/main/java/com/oseasy/mmc/localaudiorender/: AudioRender.java  MmcAudioTracker.java  MutliAudioService.java  MyReceiver.java
localaudiorender/gradle/wrapper/: gradle-wrapper.properties
microaudiorender/app/: build.gradle
microaudiorender/app/src/main/: AndroidManifest.xml
microaudiorender/app/src/main/cpp/: AudioRender.cpp  Reciever.cpp  UdpSender.h  aacdec.h  com_oseasy_mmc_microaudiorender_AudioRender.h  logger.h  udpAudioUnPacker.cpp
microaudiorender/app/src/main/cpp/include/common/: AudioUdpDefine.h  WinError.h
microaudiorender/app/src/main/java/com/oseasy/mmc/microaudiorender/: AudioRender.java  MmcAudioTracker.java  MutliAudioService.java  MyReceiver.java
microaudiorender/app/src/main/res/layout/: activity_main.xml
microaudiorender/app/src/main/res/values/: strings.xml
multirender/app/: CMakeLists.txt  build.gradle
multirender/app/src/main/: AndroidManifest.xml
multirender/app/src/main/cpp/: Reciever.cpp  Reciever.h  com_oseasy_mmc_multirender_MultiRender.h  multiRender.cpp  udpImageUnPacker.cpp  udpImageUnPacker.h
multirender/app/src/main/cpp/include/common/: DataCacheWrapper.h  WaitWrapper.h
multirender/app/src/main/java/com/oseasy/mmc/multirender/: LogToFile.java  MainActivity.java  MultiRender.java  MyIntentService.java  MyReceiver.java
multirender/app/src/main/res/layout/: activity_main.xml
multirender/app/src/main/res/values/: strings.xml
multirender/gradle/wrapper/: gradle-wrapper.properties
